// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error page 1`] = `
<div>
  <div>
    <h1>
      Test Name
    </h1>
    <div />
    <div>
      Test 
      <i>
        italic 
      </i>
      <b>
        bold
      </b>
       text.
    </div>
  </div>
</div>
`;

exports[`2. a loading state 1`] = `
<div>
  <div>
    <h1>
      Test Name
    </h1>
    <div />
    <div>
      Test 
      <i>
        italic 
      </i>
      <b>
        bold
      </b>
       text.
    </div>
  </div>
</div>
`;

exports[`3. uses general description when there is no description 1`] = `
<div>
  <div>
    <h1>
      London
    </h1>
  </div>
</div>
`;

exports[`4. render description when there is description 1`] = `
<div>
  <div>
    <h1>
      London
    </h1>
    <div />
    <div>
      Sample 
      <i>
        Description.
      </i>
    </div>
  </div>
</div>
`;

exports[`5. an article list 1`] = `
<div>
  <div>
    <h1>
      Test Name
    </h1>
    <div />
    <div>
      Test 
      <i>
        italic 
      </i>
      <b>
        bold
      </b>
       text.
    </div>
  </div>
</div>
`;
